# package-json-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
package_json_analyzer/: __init__.py  main.py  run_all.py
package_json_analyzer/clustering/: clustering.py  get_pca_loadings.py  kmeans.py  pca.py  tsne.py  utils.py  vectorize.py
package_json_analyzer/common/: __init__.py  export_df.py  export_image.py  format_df.py  run_all.py
package_json_analyzer/cooccurrence/: __init__.py  cooccurrence.py  get_conditional_probability.py  make_heatmap.py  make_network.py  utils.py
package_json_analyzer/intersection/: __init__.py  get_duplication.py  get_frequency.py  intersection.py  utils.py
package_json_analyzer/preprocessing/: load.py  load_dump.py  preprocess.py
package_json_analyzer/statistics/: statistics.py  utils.py
src/: main.py
src/clustering/: clustering.py  test.py
src/common/: constants.py  export_df.py  logger.py  non_nan_count.py
src/cooccurrence/: cooccurrence.py  format_df.py  get_conditional_probability.py  get_probability.py  test.py
src/intersection/: get_duplication.py  get_frequency.py  intersection.py  test.py
src/preprocessing/: load.py  load_dump.py  preprocess.py  test.py
tests/: test_get_duplication.py  test_get_frequency.py  test_get_probability.py  test_non_nan_count.py
tests/pja-test-data-ghac/5/8/backface/turtleCloud/master/.github/workflows/: staging.yml
tests/pja-test-data-ghac/7/1/Brightspace/frau-appconfig-builder/main/.github/workflows/: release.yml
(+5 files in other folders)
